--- a/smlm_analysis/notebooks/dbscan_clustering.ipynb
+++ b/smlm_analysis/notebooks/dbscan_clustering.ipynb
@@ -1607,7 +1607,7 @@
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from smlm_analysis.utils.locs_hdfstore import ClustersHDFStore\n",
-    "from smlm_analysis.clustering.dbscan_analysis import run_dbscan"
+    "from smlm_analysis.cluster.dbscan_analysis import run_dbscan"
    ]
   },
   {
